--- a/css/project.css
+++ b/css/project.css
@@ -1,14 +1,13 @@
 html {
-  scroll-behavior: smooth;
 }
 body {
   background-color: rgb(13, 13, 13);
-  padding:0; margin:0;
+  padding:0;
+  margin:0;
 
 }
 br {
    display: block;
-   margin: 5px 0;
    line-height:55px;
 }
 table, th, td {
@@ -18,15 +17,19 @@ table, th, td {
 }
 th, td {
   padding: 5px 15px;
+  opacity: 0.8
 }
 table {
   margin-top: 5px;
   margin-bottom: 25px;
 }
 th {
-  font-size: 40px;
-  text-decoration: underline;
+  font-size: 2.2vw;
   width: 20%;
+}
+td {
+  text-align: center;
+  font-size: 1.5vw;
 }
 .wrapword{
 white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
@@ -76,7 +79,7 @@ white-space: normal;
   position: fixed;
   background-color: black;
   font-family: 'Oswald', serif;
-  font-size: 25px;
+  font-size: 1vw;
   padding: 20px 0px;
   width: 100%;
   z-index: 1
@@ -104,7 +107,9 @@ white-space: normal;
 .quarter {
   display: inline-block;
   float: left;
-  width: 24%
+  width: 23.8%;
+  text-align: center;
+  font-size: 1vw;
 }
 .w3-container {
   position: relative
@@ -117,7 +122,7 @@ white-space: normal;
   font-family: 'Noto Serif', serif;
 }
 .travellocation {
-  font-size: 50px;
+  font-size: 2.5vw;
   padding: 300px 100px;
   color: white;
 }
@@ -131,12 +136,6 @@ white-space: normal;
   background-size: cover;
   background-image: url('../images/arizonaext.jpg');
 }
-.hotels {
-  float: left;
-  text-align: left;
-  background-color: white;
-  margin: auto;
-}
 .events {
   float: left;
   text-align: left;
@@ -146,14 +145,17 @@ white-space: normal;
 .center {
   font-family: "Noto Serif", serif;
   background-color: white;
+  margin: auto;
 }
 .scheduletable {
   background-color: rgb(13, 13, 13);
   color: white;
-  opacity: 0.6;
   font-family: "Noto Serif", serif;
 }
-.white, .white:visited, .white:link {
+td:hover, th:hover {
+  opacity: 1;
+}
+.footer, .footer:visited, .footer:link {
   padding: 5px 20px;
   font-family: "Noto Serif", serif;
   color: white;
@@ -165,14 +167,14 @@ white-space: normal;
   text-decoration: none;
 }
 .schedule {
-  font-size: 35px;
+  font-size: 8vw;
   text-align: center;
   padding: 5px 50px
 }
 .headings {
-  padding: 50px 200px;
+  padding: 5vw 0px;
   text-align: center;
-  font-size: 100px;
+  font-size: 5vw;
   color: white;
   font-family: 'Courgette';
 }
@@ -188,4 +190,52 @@ white-space: normal;
 }
 .linkonhomepage {
 
+}
+.footer {
+  font-size: 1vw;
+  text-align: center;
+}
+.hotelbackground {
+  background-image: url("https://cache.marriott.com/marriottassets/marriott/PHXGP/phxgp-exterior-7698-hor-feat.jpg");
+  background-position: 0px -20vw;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-size: cover;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.eventsbackground {
+  background-repeat: no-repeat;
+  background-image: url("http://www.mvifi.org/wp-content/uploads/2018/06/IMG_0521.jpg");
+  object-fit: contain;
+  background-size: cover;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.schedulebackground {
+  background-repeat: no-repeat;
+  background-image: url("https://www.agbell.org/portals/26/Chapters/Arizona/Arizona.jpg?ver=2018-08-27-154826-870");
+  background-position: center;
+  object-fit: contain;
+  background-size: cover;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.costsbackground {
+  background-repeat: no-repeat;
+  background-image: url("http://dastornews.com/wp-content/uploads/2017/12/Things-to-do-new-header.jpg");
+  background-position: center;
+  object-fit: contain;
+  background-size: cover;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.flightsbackground {
+  background-repeat: no-repeat;
+  background-image: url("https://wallpapersite.com/images/wallpapers/airplane-4200x2608-aircraft-air-travel-4k-1028.jpg");
+  background-position: center;
+  object-fit: contain;
+  background-size: cover;
+  margin-top: 0;
+  margin-bottom: 0;
 }
