--- a/css/project.css
+++ b/css/project.css
@@ -179,14 +179,21 @@ td:hover, th:hover {
   font-family: 'Courgette';
 }
 .homepage {
-  background-color: rgb(13, 13, 13);
-  padding: 15% 15%;
+  background-image: url("../images/devdancelogo.png");
+  background-position: 24vw 5vw;
+  background-color: rgb(13,13,13);
+  background-repeat: no-repeat;
+  background-size: 55vw;
+
 }
 .defaulttext {
   color: white;
   font-size: 20px;
   font-family: 'Courgette', cursive;
   text-align: center;
+  padding: 15% 15%;
+  position: relative;
+  top: 120px;
 }
 .linkonhomepage {
 
@@ -194,6 +201,14 @@ td:hover, th:hover {
 .footer {
   font-size: 1vw;
   text-align: center;
+}
+.uhhclassname {
+  color: rgb(20,20,20);
+  font-size: 20px;
+  font-family: 'Courgette', cursive;
+  padding: 0% 2%;
+  left: 0;
+  bottom: 0;
 }
 .hotelbackground {
   background-image: url("https://cache.marriott.com/marriottassets/marriott/PHXGP/phxgp-exterior-7698-hor-feat.jpg");
@@ -238,4 +253,80 @@ td:hover, th:hover {
   background-size: cover;
   margin-top: 0;
   margin-bottom: 0;
+}
+@keyframes homescreen {
+  0% {background-image: url("../images/animation/frame1.png");}
+  2% {background-image: url("../images/animation/frame2.png");}
+  4% {background-image: url("../images/animation/frame3.png");}
+  6% {background-image: url("../images/animation/frame4.png");}
+  8% {background-image: url("../images/animation/frame5.png");}
+  10% {background-image: url("../images/animation/frame6.png");}
+  12% {background-image: url("../images/animation/frame7.png");}
+  14% {background-image: url("../images/animation/frame8.png");}
+  16% {background-image: url("../images/animation/frame7.png");}
+  18% {background-image: url("../images/animation/frame6.png");}
+  20% {background-image: url("../images/animation/frame7.png");}
+  22% {background-image: url("../images/animation/frame8.png");}
+  24% {background-image: url("../images/animation/frame9.png");}
+  26% {background-image: url("../images/animation/frame10.png");}
+  28% {background-image: url("../images/animation/frame11.png");}
+  30% {background-image: url("../images/animation/frame12.png");}
+  32% {background-image: url("../images/animation/frame12.png");}
+  34% {background-image: url("../images/animation/frame12.png");}
+  36% {background-image: url("../images/animation/frame12.png");}
+  38% {background-image: url("../images/animation/frame12.png");}
+  40% {background-image: url("../images/animation/frame12.png");}
+  42% {background-image: url("../images/animation/frame12.png");}
+  44% {background-image: url("../images/animation/frame12.png");}
+  46% {background-image: url("../images/animation/frame12.png");}
+  48% {background-image: url("../images/animation/frame12.png");}
+  50% {background-image: url("../images/animation/frame12.png");}
+  100% {background-image: url("../images/animation/frame12.png");}
+}
+@-webkit-keyframes homescreen {
+  0% {background-image: url("../images/animation/frame1.png");}
+  2% {background-image: url("../images/animation/frame2.png");}
+  4% {background-image: url("../images/animation/frame3.png");}
+  6% {background-image: url("../images/animation/frame4.png");}
+  8% {background-image: url("../images/animation/frame5.png");}
+  10% {background-image: url("../images/animation/frame6.png");}
+  12% {background-image: url("../images/animation/frame7.png");}
+  14% {background-image: url("../images/animation/frame8.png");}
+  16% {background-image: url("../images/animation/frame7.png");}
+  18% {background-image: url("../images/animation/frame6.png");}
+  20% {background-image: url("../images/animation/frame7.png");}
+  22% {background-image: url("../images/animation/frame8.png");}
+  24% {background-image: url("../images/animation/frame9.png");}
+  26% {background-image: url("../images/animation/frame10.png");}
+  28% {background-image: url("../images/animation/frame11.png");}
+  30% {background-image: url("../images/animation/frame12.png");}
+  32% {background-image: url("../images/animation/frame12.png");}
+  34% {background-image: url("../images/animation/frame12.png");}
+  36% {background-image: url("../images/animation/frame12.png");}
+  38% {background-image: url("../images/animation/frame12.png");}
+  40% {background-image: url("../images/animation/frame12.png");}
+  42% {background-image: url("../images/animation/frame12.png");}
+  44% {background-image: url("../images/animation/frame12.png");}
+  46% {background-image: url("../images/animation/frame12.png");}
+  48% {background-image: url("../images/animation/frame12.png");}
+  50% {background-image: url("../images/animation/frame12.png");}
+  100% {background-image: url("../images/animation/frame12.png");}
+}
+.test {
+  position:absolute;
+  left:0px;
+  right:0px;
+  z-index: -1;
+  animation-iteration-count: infinite;
+  background-repeat: no-repeat;
+  animation-name: homescreen;
+  animation-duration: 3s;
+  width:100%;
+  background-size: 55vw;
+  animation-delay: 2s;
+  -webkit-transform: translateZ(0);
+-moz-transform: translateZ(0);
+-ms-transform: translateZ(0);
+-o-transform: translateZ(0);
+transform: translateZ(0);
 }
