--- a/css/project.css
+++ b/css/project.css
@@ -102,12 +102,12 @@ white-space: normal;
     padding-bottom: 64px!important;
 }
 .w3-card {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.16),0 4px 10px 0 rgba(0,0,0,0.12)
 }
 .quarter {
   display: inline-block;
   float: left;
-  width: 23.8%;
+  width: 15.8%;
   text-align: center;
   font-size: 1vw;
 }
@@ -146,6 +146,9 @@ white-space: normal;
   font-family: "Noto Serif", serif;
   background-color: white;
   margin: auto;
+  display: block;
+}
+.center-cards {
 }
 .scheduletable {
   background-color: rgb(13, 13, 13);
@@ -195,7 +198,20 @@ td:hover, th:hover {
   width: 100%;
 }
 .linkonhomepage {
-
+  padding-left: 1vw;
+  padding-right: 1vw;
+  padding-top: 0.5vw;
+  padding-bottom: 0.5vw;
+  position: absolute;
+  left: 1vw;
+  z-index: 10;
+  top: 40vw;
+  color: rgb(220,220,220);
+  font-family: NotoSerif, serif;
+  font-size: 1vw;
+  text-decoration: none;
+  text-align: center;
+  border: 2px solid rgb(255,255,255);
 }
 .footer {
   font-size: 1vw;
@@ -313,13 +329,13 @@ td:hover, th:hover {
 }
 .test {
   padding-top: 100%;
-  position:absolute;
+  position: absolute;
   animation-iteration-count: infinite;
   background-repeat: no-repeat;
   animation-name: homescreen;
   animation-duration: 3s;
   background-size: 50vw;
-  margin-left: 25vw;
+  margin-left: 26vw;
   width: 100%;
   animation-delay:1s;
   -webkit-transform: translateZ(0);
