--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,10 +1,12 @@
 html {
+	text-decoration: none;
 }
 body {
   background-color: rgb(13, 13, 13);
   padding:0;
   margin:0;
   overflow: hidden;
+  
 }
 br {
    display: block;
@@ -351,4 +353,24 @@ td:hover, th:hover {
 -ms-transform: translateZ(0);
 -o-transform: translateZ(0);
 transform: translateZ(0);
+}
+#email {
+  position: absolute;
+  font-size: 2vw;
+  width:100%;
+  text-align: center;
+  bottom: -5vw;
+  text-decoration: none;
+  font-family: 'Oswald', serif;
+}
+#links {
+  text-decoration: none;
+  font-family: 'Oswald', serif;
+}
+a:visited, a:link{
+  color: rgb(230,230,230);
+  text-decoration: none!important;
+} 
+a:hover {
+  color: white;
 }
