--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato&family=Roboto&family=Yellowtail&display=swap');
+
+html, body { height: 100% }
+
 html {
     scroll-behavior: smooth;
     font-family: 'Bebas Neue', cursive;
     margin: 0;
+    overflow-x:hidden
 }
 
 .nav {
+    top: 0;
     float: left;
     margin-left: 2%;
-    position: sticky;
+    position: fixed;
     top: 30%;
     
 }
@@ -47,6 +52,7 @@ html {
 
 .nav table {
     font-size: 1vw;
+    font-weight: 100;
     padding-bottom: 10px;
     border-collapse: separate;
     border-spacing: 15px;
@@ -96,9 +102,9 @@ body {
 }
 
 .section a {
-    font-size: 1.5vw;
+    font-size: 1vw;
     color: rgb(0, 112, 116);
-    transition: 1s;
+    transition: color 1s;
 }
 
 .section a:hover {
@@ -110,7 +116,7 @@ body {
 }
 
 .section p {
-    font-size: 1.5vw;
+    font-size: 1vw;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -126,10 +132,24 @@ body {
 }
 
 .footer {
-    padding-left: 20px;
-    position: sticky;
+    padding-left: 40px;
+    position: fixed;
     bottom: 0;
 }
+
+#visit-FRC {
+    word-wrap: break-word;
+    white-space: nowrap;
+}
+
+#progress {
+    border-left: 2px solid grey;
+    position: fixed;
+    left: 1%;
+    top: 0;
+    float: left;
+  }
+
 
 /**https://codepen.io/raf187/pen/BvgGRQ**/
 .arrow{
