--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,7 +14,7 @@ html {
     float: left;
     margin-left: 2%;
     position: fixed;
-    top: 30%;
+    top: 20%;
     
 }
 
@@ -66,6 +66,10 @@ html {
 
 body {
     margin: 0;
+}
+
+.indent {
+    padding-left: 5%;
 }
 
 .main-section {
