--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,6 +9,35 @@ html {
     overflow-x:hidden
 }
 
+#portfolio-container {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+#portfolio-joke {
+    text-align: left; 
+}
+
+#portfolio-joke p {
+    font-size: 1.3vw;
+    color: rgb(0, 0, 0);
+    font-family: "Lucida Console", Monaco, monospace;
+}
+
+.blue {
+    color: rgb(112, 150, 255);
+}
+
+.purple {
+    color: rgb(185, 124, 255)
+}
+
+.yellow {
+    color: rgb(214, 224, 123)
+}
+
 .nav {
     top: 0;
     float: left;
@@ -152,7 +181,8 @@ body {
     left: 1%;
     top: 0;
     float: left;
-  }
+}
+
 
 
 /**https://codepen.io/raf187/pen/BvgGRQ**/
