--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -228,7 +228,52 @@ body {
     }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 600px){
+    .nav {
+        display: none;
+        float: left;
+        margin-left: 2%;
+        position: fixed;
+        top: 15%;
+        
+    }
+    .big-text-main {
+        font-size: 10vw;
+        display:inline-block;
+        margin-top: 0;
+    }
+    .section p {
+        font-size: 4vw;
+    }
+    .section {
+        justify-content: center;
+        width: 75%;
+        height: 100%;
+        text-align: center;
+        margin: auto;
+    }
+    .arrow span{
+        display: none;
+    }
+    #duck {
+        margin-top: 2vw;
+        height: 10vw;
+    }
+    .footer {
+        z-index: 1;
+        padding-right: 10%;
+        background-color: white;;
+        padding-left: 10px;
+        position: fixed;
+        bottom: 0;
+    }
+    .section-heading {
+        font-size: 7vw;
+    }
+}
+
+
+@media screen and (max-width: 430px){
     #progress {
         z-index: 2;
     }
