--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -42,7 +42,7 @@ html {
     float: left;
     margin-left: 2%;
     position: fixed;
-    top: 15%;
+    top: 10%;
     
 }
 
@@ -381,3 +381,36 @@ body {
     }
   
 }
+
+
+
+.dropbtn {
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  
+  .dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  
+  .show {display: block;}
