--- a/css/index.css
+++ b/css/index.css
@@ -1,152 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+html {
+    scroll-behavior: smooth;
+    
+}
 
-body {
-    background-color: rgb(20, 20, 20);
+body { 
+    background-color: rgb(36, 34, 32);
     color: white;
-    font-family: 'Poppins', sans-serif;
 }
 
-#portfolio-joke {
-    color: rgb(146, 199, 212)
+#content { 
+    margin-top: 0%;
+    margin-left: 20%;
+    margin-right: 20%;
+
+}
+.intro h1 {
+    font-size: calc(20px + 3vw)
+}
+#brief-desc {
+    margin-top: 40px;
 }
 
-.indent {
-    margin-left: 40px;
-    margin-top: 0;
-    margin-bottom: 0;
+a:hover, a:active, a:visited, a {
+    color: #c6fff7;
 }
 
-.link {
-    color: rgb(200, 200, 200);
-}
-
-.link:hover {
-    color: rgb(170, 170, 170);
-}
-
-a, a:hover, a:visited, a:active {
-    text-decoration: none;
-}
-
-#name {
-    border-bottom: 1px solid #bebebe;
-}
-
-.image {
-    display: block;
-    margin-bottom: 5px;
-    width: 20rem;
-    margin-top: 5px;
-    margin-right: 40px;
-    float: left;
-}
-
-.table-container {
-    overflow-x: auto;
-}
-
-.table-standard {
-    border-collapse: collapse;
-    margin: auto;
-    width: 90%;
-}
-.table-standard td, .table-standard th {
-    padding-left: 5px;
-    padding-right: 5px;
-    border: 1px solid white;
-}
-
-.heading {
-    padding-top: 2%;
-    margin: auto;
-    width: 70%;
-    position: relative;
-}
-
-.personal-desc-row { 
-    color: white;
-    text-align: center;
-}
-
-.personal-desc-item a:visited {
-    color:white;
-}
-
-.personal-desc-item {
-    color: white;
-    border-bottom: 1px solid #bebebe;
-    border-top: 1px solid #bebebe;
-    transition: padding 100ms linear;
-    will-change: padding;
-    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-}
-
-.personal-desc-item:hover {
-    padding: 1rem 0.5rem 1rem 0.5rem;
-    transition: padding 200ms linear;
-}
-
-#personal-desc-table {
-    font-size: 1vw;
-    padding-bottom: 10px;
-    border-collapse: separate;
-    border-spacing: 15px;
-}
-
-#nav {
+.year-label-container {
+    overflow-y: hidden;
     overflow-x: hidden;
-    width: 10vw;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 2%;
-    float: left;
-    z-index: 10;
-}
-
-.info-frame {
-    padding-left: 5%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 5%;
-    margin-left: 10vw;
-    background-color: rgb(40, 40, 40);
-    position: relative;
 }
 
 
-/**https://codepen.io/raf187/pen/BvgGRQ**/
-.arrow{
+.year-label {
+    font-size: calc(10px + 3vw);
+    transition: 'color 1s ease-in-out';
+    
+}
+
+.year-label:hover {
+    text-decoration-line: underline ;
+    -moz-text-decoration-line: underline;
+}
+
+.year-container {
+    margin-left: 15%;
+    margin-right: 15%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.year-container img {
+    width: calc(10vw + 180px);
+    
+}
+
+#year-2019-img {
+
+}
+
+#year-2019-img img {
+    
+}
+
+.project-img {
+    padding-left: 40px;
+}
+.year-container p {
+    font-size: 1.2vw;
+}
+
+.year-container h1 {
+    margin: 0;
+    font-size: 4vw;
+    color: #c6fff7;
+}
+.top-right {
     position: absolute;
-    top: 90%;
-    left: 7.5%;
-    transform: translate(-50%,-50%);
+    right: 0;
+    top: 0;
+    margin-right: 1%;
+    margin-top: 1%;
 }
-.arrow span{
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 2px solid #bebebe;
-    border-right: 2px solid #c5c5c5;
-    transform: rotate(45deg);
-    margin: -15px;
-    animation: animate 2s infinite;
+
+.background-circle {
+    top: -25%;
+    position: absolute;
+    opacity: .4;
 }
-.arrow span:nth-child(2){
-    animation-delay: -0.2s;
+
+#circle-frame {
+    left: 0;
+    right: 0;
+    margin: auto;
 }
-.arrow span:nth-child(3){
-    animation-delay: -0.4s;
+
+.slide {
+    
 }
-@keyframes animate {
-    0%{
-        opacity: 0;
-        transform: rotate(45deg) translate(-10px,-10px);
-    }
-    50%{
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-        transform: rotate(45deg) translate(20px,20px);
+
+
+body{
+    background: radial-gradient(ellipse at bottom,
+                                #15161a 0%, #000000 100%);
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  .footer {
+    z-index: 1;
+    width: 100%;
+    padding-left: 10px;
+    position: fixed;
+    bottom: 0;
+}
+#progress {
+    border-left: 2px solid grey;
+    position: fixed;
+    left: 1%;
+    top: 0;
+    float: left;
+}
+
+.border {
+    border: none !important;
+}
+
+.year-container h1 {
+    
+}
+
+.year-container table {
+    
+}
+
+#dynamic-name {
+    color: rgb(189, 247, 255);
+}
+
+.flex-container {
+    display: flex;
+}
+
+.quick-links {
+    width: 100%;
+    margin: auto;
+    
+}
+.quick-links a {
+    margin-right: calc(5px + 0.5vw);
+    font-size: calc(10px + 1vw)
+}
+
+@media only screen and (max-width: 600px) {
+    #content {
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
