--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@ body {
     color: white;
 }
 
+
+
 #content { 
     margin-top: 0%;
     margin-left: 20%;
@@ -42,7 +44,7 @@ a:hover, a:active, a:visited, a {
     -moz-text-decoration-line: underline;
 }
 
-.year-container {
+.section-container {
     margin-left: 15%;
     margin-right: 15%;
     overflow-y: hidden;
@@ -54,13 +56,6 @@ a:hover, a:active, a:visited, a {
     
 }
 
-#year-2019-img {
-
-}
-
-#year-2019-img img {
-    
-}
 
 .project-img {
     padding-left: 40px;
@@ -82,22 +77,25 @@ a:hover, a:active, a:visited, a {
     margin-top: 1%;
 }
 
-.background-circle {
-    top: -25%;
-    position: absolute;
-    opacity: .4;
-}
-
-#circle-frame {
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
 .slide {
     
 }
 
+
+#projects-flexbox {
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+#projects-flexbox > div {
+    margin: 5px;
+}
+#projects-flexbox h3 {
+    
+}
 
 body{
     background: radial-gradient(ellipse at bottom,
@@ -155,9 +153,32 @@ body{
     font-size: calc(10px + 1vw)
 }
 
+
 @media only screen and (max-width: 600px) {
     #content {
         margin-left: 10%;
         margin-right: 10%;
     }
+    .footer {
+        display: none;
+    }
 }
+
+@media (max-width: 1025px) {
+    .footer {
+        
+        padding-top: 5px;
+        background-color: #000000;
+    }
+    .section-container h3 {
+        font-size: calc(12px + 2vw);
+    }
+    .section-container p {
+        font-size: calc(7px + 2vw);
+    }
+    
+    #projects-flexbox {
+        flex-direction: column;
+    }
+}
+
